# brooks_builds

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  index.ts  package-lock.json  package.json  start_vscode.sh
.github/workflows/: main.yml  (+2 more)
infrastructure/: Pulumi.prod.yaml  Pulumi.production.yaml  Pulumi.yaml  aws_vpc.ts  index.ts  package-lock.json  package.json
integration_tests/: package-lock.json
platform/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json
platform/webapp/: Cargo.toml  Dockerfile  index.html
platform/webapp/src/: app.rs  lib.rs  logging.rs  router.rs
platform/webapp/src/components/: bb_icon.rs  mod.rs  top_menu.rs
platform/webapp/src/pages/: home.rs
platform/webapp/src/static/: main.css
platform/webapp/static/: output.css
platform/webapp/tailwind/: package-lock.json  tailwind.config.js
platform_backend/: Cargo.toml  Dockerfile  Dockerfile-dev
platform_backend/src/: lib.rs  main.rs
platform_web/: Cargo.toml  index.html
platform_web/src/: background.rs  background_circle.rs  background_square.rs  lib.rs  main.rs  router.rs
platform_web/src/components/: background_triangle.rs  mod.rs
platform_web/src/components/atoms/: background_circle.rs  background_square.rs  background_triangle.rs  mod.rs
platform_web/src/components/molecules/: background.rs  mod.rs  navbar.rs
platform_web/src/components/views/: auth_callback.rs  error_404.rs  home.rs  mod.rs
platform_web/src/stores/: auth.rs
platform_web/src/utilities/: cookie.rs  log.rs  mod.rs
platform_web/static/: main.css
webapp/: Cargo.toml  index.html
(+17 files in other folders)
