[package]
name = "platform_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.11", features = ["headers"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
