[package]
name = "platform_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.16.0"
dotenv = "0.15.0"
eyre = "0.6.8"
getrandom = { version = "0.2.7", features = ["js"] }
gloo = "0.8.0"
load-dotenv = "0.1.2"
rand = "0.8.5"
stylist = { version = "0.10.1", features = ["yew", "yew_use_style"] }
url = "2.2.2"
wasm-bindgen = "0.2.81"
wasm-bindgen-futures = "0.4.31"
web-sys = { version = "0.3.58", features = ["HtmlDocument"] }
yew = "0.19.3"
yew-hooks = "0.1.56"
yew-router = "0.16.0"
yewdux = "0.7.0"
yewdux-functional = "0.1.0"
