[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
serde = "1.0.137"
serde_json = "1.0.81"
gloo = "0.7.0"
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }
eyre = "0.6.8"
wasm-bindgen-futures = "0.4.30"
stylist = { version = "0.10.0", features = ["yew_integration"] }